iso codes added

--- a/Workfolder Climate cases (Caspar)/climate_cases_transformation.ipynb
+++ b/Workfolder Climate cases (Caspar)/climate_cases_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "15bf9d4b",
    "metadata": {},
    "outputs": [],
@@ -103,16 +103,153 @@
   },
   {
    "cell_type": "code",
-   "id": "z194z2jn2xn",
-   "source": "# Geography Statistics\nprint(\"\\n\" + \"=\"*50)\nprint(\"GEOGRAPHY STATISTICS\")\nprint(\"=\"*50)\n\n# Count total cases\ntotal_cases = len(final_df)\nprint(f\"\\nTotal cases: {total_cases}\")\n\n# Analyze Geographies column\n# Note: Each row might contain multiple geographies separated by delimiters\ngeography_counts = {}\n\nfor idx, row in final_df.iterrows():\n    geographies = str(row['Geographies'])\n    \n    # Skip if NaN or empty\n    if pd.isna(row['Geographies']) or geographies == 'nan':\n        geography_counts['Unknown/Not Specified'] = geography_counts.get('Unknown/Not Specified', 0) + 1\n    else:\n        # Split by common delimiters (adjust based on your data format)\n        # Common delimiters: semicolon, comma, pipe\n        import re\n        geo_list = re.split(r'[;,|]', geographies)\n        \n        for geo in geo_list:\n            geo = geo.strip()\n            if geo:\n                geography_counts[geo] = geography_counts.get(geo, 0) + 1\n\n# Convert to DataFrame for better display\ngeography_stats = pd.DataFrame([\n    {'Geography': geo, 'Count': count, 'Percentage': (count/total_cases)*100}\n    for geo, count in sorted(geography_counts.items(), key=lambda x: x[1], reverse=True)\n])\n\nprint(\"\\nGeography Distribution:\")\nprint(geography_stats.to_string(index=False))\n\nprint(f\"\\nTotal unique geographies: {len(geography_counts)}\")\n\n# Optional: Create a simple bar chart\nimport matplotlib.pyplot as plt\n\n# Show top 15 geographies\ntop_n = 15\ntop_geographies = geography_stats.head(top_n)\n\nplt.figure(figsize=(12, 6))\nplt.barh(range(len(top_geographies)), top_geographies['Count'])\nplt.yticks(range(len(top_geographies)), top_geographies['Geography'])\nplt.xlabel('Number of Cases')\nplt.ylabel('Geography')\nplt.title(f'Top {top_n} Geographies by Case Count')\nplt.gca().invert_yaxis()\nplt.tight_layout()\nplt.show()\n\n# Save statistics to CSV\ngeography_stats.to_csv('geography_statistics.csv', index=False)\nprint(\"\\nGeography statistics saved to: geography_statistics.csv\")",
-   "metadata": {},
    "execution_count": null,
-   "outputs": []
+   "id": "z194z2jn2xn",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Geography Statistics\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"GEOGRAPHY STATISTICS\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "# Count total cases\n",
+    "total_cases = len(final_df)\n",
+    "print(f\"\\nTotal cases: {total_cases}\")\n",
+    "\n",
+    "# Analyze Geographies column\n",
+    "# Note: Each row might contain multiple geographies separated by delimiters\n",
+    "geography_counts = {}\n",
+    "\n",
+    "for idx, row in final_df.iterrows():\n",
+    "    geographies = str(row['Geographies'])\n",
+    "    \n",
+    "    # Skip if NaN or empty\n",
+    "    if pd.isna(row['Geographies']) or geographies == 'nan':\n",
+    "        geography_counts['Unknown/Not Specified'] = geography_counts.get('Unknown/Not Specified', 0) + 1\n",
+    "    else:\n",
+    "        # Split by common delimiters (adjust based on your data format)\n",
+    "        # Common delimiters: semicolon, comma, pipe\n",
+    "        import re\n",
+    "        geo_list = re.split(r'[;,|]', geographies)\n",
+    "        \n",
+    "        for geo in geo_list:\n",
+    "            geo = geo.strip()\n",
+    "            if geo:\n",
+    "                geography_counts[geo] = geography_counts.get(geo, 0) + 1\n",
+    "\n",
+    "# Convert to DataFrame for better display\n",
+    "geography_stats = pd.DataFrame([\n",
+    "    {'Geography': geo, 'Count': count, 'Percentage': (count/total_cases)*100}\n",
+    "    for geo, count in sorted(geography_counts.items(), key=lambda x: x[1], reverse=True)\n",
+    "])\n",
+    "\n",
+    "print(\"\\nGeography Distribution:\")\n",
+    "print(geography_stats.to_string(index=False))\n",
+    "\n",
+    "print(f\"\\nTotal unique geographies: {len(geography_counts)}\")\n",
+    "\n",
+    "# Optional: Create a simple bar chart\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Show top 15 geographies\n",
+    "top_n = 15\n",
+    "top_geographies = geography_stats.head(top_n)\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.barh(range(len(top_geographies)), top_geographies['Count'])\n",
+    "plt.yticks(range(len(top_geographies)), top_geographies['Geography'])\n",
+    "plt.xlabel('Number of Cases')\n",
+    "plt.ylabel('Geography')\n",
+    "plt.title(f'Top {top_n} Geographies by Case Count')\n",
+    "plt.gca().invert_yaxis()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Save statistics to CSV\n",
+    "geography_stats.to_csv('geography_statistics.csv', index=False)\n",
+    "print(\"\\nGeography statistics saved to: geography_statistics.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1ff460f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Geographies\n",
+      "USA;US-DC    253\n",
+      "USA;US-CA    135\n",
+      "BRA;BR-PA     73\n",
+      "BRA           72\n",
+      "USA;US-NY     65\n",
+      "XAB           58\n",
+      "USA           53\n",
+      "GBR           48\n",
+      "USA;US-AK     41\n",
+      "BRA;BR-AM     40\n",
+      "USA;US-WA     36\n",
+      "USA;US-OR     36\n",
+      "NZL           27\n",
+      "USA;US-MT     24\n",
+      "AUS           23\n",
+      "USA;US-MA     23\n",
+      "USA;US-TX     22\n",
+      "USA;US-LA     20\n",
+      "USA;US-MD     19\n",
+      "USA;US-AZ     17\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load  CSV\n",
+    "df = pd.read_csv('combined_climate_data.csv')\n",
+    "\n",
+    "# Show top 10 most common values in the 'Geographies' column\n",
+    "print(df['Geographies'].value_counts().head(20))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f93fc73f",
+   "metadata": {},
+   "source": [
+    "the most listed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d54ac144",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gds25",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
