--- a/Workfolder Climate cases (Caspar)/ISO Country codes.ipynb
+++ b/Workfolder Climate cases (Caspar)/ISO Country codes.ipynb
@@ -48,11 +48,107 @@
     "print(f\"Unmatched countries: {len(unmatched)}\")\n",
     "print(unmatched[['country_column_1', 'country_column_2']])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f178bccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1647755244.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip get kagglehub[pandas-datasets]\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install dependencies as needed:\n",
+    "pip get kagglehub[pandas-datasets]\n",
+    "import kagglehub\n",
+    "from kagglehub import KaggleDatasetAdapter\n",
+    "\n",
+    "# Set the path to the file you'd like to load\n",
+    "file_path = \"\"\n",
+    "\n",
+    "# Load the latest version\n",
+    "df = kagglehub.load_dataset(\n",
+    "  KaggleDatasetAdapter.PANDAS,\n",
+    "  \"batrosjamali/world-press-freedom-index\",\n",
+    "  file_path,\n",
+    "  # Provide any additional arguments like \n",
+    "  # sql_query or pandas_kwargs. See the \n",
+    "  # documenation for more information:\n",
+    "  # https://github.com/Kaggle/kagglehub/blob/main/README.md#kaggledatasetadapterpandas\n",
+    ")\n",
+    "\n",
+    "print(\"First 5 records:\", df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c9e422",
+   "metadata": {},
+   "source": [
+    "Dataset press freedome \n",
+    "TODO: \n",
+    "have to drop everything exept iso year and rank\n",
+    "    Q: what doese a ranking compare to lets say literature percentage? \n",
+    "    do i group high low? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f722c1b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install dependencies as needed:\n",
+    "# pip install kagglehub[pandas-datasets]\n",
+    "import kagglehub\n",
+    "from kagglehub import KaggleDatasetAdapter\n",
+    "\n",
+    "# Set the path to the file you'd like to load\n",
+    "file_path = \"\"\n",
+    "\n",
+    "# Load the latest version\n",
+    "df = kagglehub.load_dataset(\n",
+    "  KaggleDatasetAdapter.PANDAS,\n",
+    "  \"hammadfarooq470/cleaned-wjp-rule-of-law-index-2021-dataset\",\n",
+    "  file_path,\n",
+    "  # Provide any additional arguments like \n",
+    "  # sql_query or pandas_kwargs. See the \n",
+    "  # documenation for more information:\n",
+    "  # https://github.com/Kaggle/kagglehub/blob/main/README.md#kaggledatasetadapterpandas\n",
+    ")\n",
+    "\n",
+    "print(\"First 5 records:\", df.head())\n",
+    "\n",
+    "\n",
+    "RULE OF LAW KGAT_baa45c74b8ee255c61dc8240cc5cc936"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gds25",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
